# vio-workspace

./: .gitignore  CMakeLists.txt  README.md  intrinsics.txt  vio-env.bash
mac_app/: main.cpp
mac_app/scripts/: canny_sobel.py  flask_test.py  open_camera.py
scripts/: open_camera.py  stream_app.py
src/d435i_vio_py/: CMakeLists.txt  package.xml
src/d435i_vio_py/scripts/: detect_camera.py  features.py  imu.py  live_depth.py  optical_flow.py  preprocessor.py  query.py  rs-camera.py  take_picture.py  tracking.py  view_rgb.py
src/d435i_vio_py/src/: d435i_preprocessed_viewer.cpp
src/image_processing/: CMakeLists.txt  package.xml
src/image_processing/scripts/: edge_features.py
src/reconstruction/: CMakeLists.txt  package.xml
src/reconstruction/scripts/: orb.py
src/vio_core/: CMakeLists.txt  package.xml
src/vio_core/src/: main.cpp
