<?xml version="1.0"?>
<package format="2">
  <name>d435i_vio_py</name>
  <version>0.0.1</version>
  <description>Simple D435i preprocessed image viewer in C++ using cv_bridge and OpenCV.</description>

  <maintainer email="you@todo.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build / run dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- OpenCV is usually pulled from system via CMake -->
  <exec_depend>opencv4</exec_depend>

  <export>
  </export>
</package>
